Create header and block with work years

--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
 })
 <body>
 	<h1 class="visually__hidden">Boldo</h1>
-  <!--@@include('html/__header.html', {})-->
+  @@include('html/__header.html', {})
+  @@include('html/__workYears.html', {})
 </body>
 </html>
